# BasicDotCAssembler

./: .gitignore  CMakeLists.txt
assembler/include/arg_parser/: arg_parser.hpp
assembler/include/bdc_assembler/: module.hpp
assembler/include/bdc_assembler/core/: arguments.hpp  modules.hpp  parser.hpp
assembler/include/bdc_assembler/utils/: config.hpp  log.hpp  utils.hpp
assembler/src/: main.cpp
assembler/src/core/: modules.cpp  parser.cpp
assembler/src/utils/: arguments.cpp  config.cpp  utils.cpp
bscripts/: build_all_debug.sh  build_all_release.sh  build_debug.sh  build_module_debug.sh  build_module_release.sh  build_release.sh  install.sh  install_modules.sh  release.sh  run_all_d.sh  run_all_r.sh  uninstall.sh
plateforms/flat/: CMakeLists.txt
plateforms/flat/module_folder/: plateform.pcf
plateforms/flat/src/: flat.cpp
plateforms/include/: bdc_assembler
